# lawyer_site

./: .dockerignore  .gitignore  README.md  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
assets/: index.js
assets/javascript/: icons.js  main.js  theme.js
assets/styles/: style.css
blog/: models.py
contact/: models.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
lawyer_site/: asgi.py  settings.py  urls.py  wsgi.py
static/: manifest.json
static/js/: index-bundle.js
templates/: hello_vite.html
templates/core/: base.html  footer.html  navbar.html
templates/partials/: links.html
