[project]
name = "lawyer-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-unfold>=0.83.1",
    "django-vite>=3.1.0",
    "djangorestframework>=3.17.1",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
]
